fix for toolbar icons on category page catalog layerd navigation for labels size updated modal alignment and size updated fix for add ons color and position fix for active links in left navigation fix for products grid

--- a/skin/frontend/bootstrapped/default/css/diff.css
+++ b/skin/frontend/bootstrapped/default/css/diff.css
@@ -1,10 +1,13 @@
 /*!
- * Bootstrapped Magento Responsive Theme v0.9.1.1
+ * Magento responsive theme aka Bootstrapped v0.9.1.1
  *
- * Copyright 2012 Magenthon.com
- *
- * Modified for Magento by @magenthon
+ * @category    design
+ * @package     bootstrapped_default
+ * @copyright   Copyright (c) 2012 Magenthon (http://magenthon.com)
+ * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @author      Vedran Subotic <vedran@magenthon.com>
  */
+
 .block-cart .form-horizontal .control-group .control-label {
 	width: 50px !important;
 }
@@ -21,26 +24,14 @@
 	margin-left: 10px;
 	margin-top: 5px;
 }
-.the-icons {
-	margin-right: 10px;
-	margin-top: 5px;
+.toolbar .the-icons {
+    vertical-align: middle;
 }
 .pagination {
 	margin: 0px !important;
 }
 .pagination a {
 	line-height: 26px !important;
-}
-.toolbar {
-	line-height: 28px !important;
-	height: 28px !important;
-	background-color: #eee;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	background-image: -moz-linear-gradient(center top, #F5F5F5 0%, #EEEEEE 100%);
-	background-repeat: repeat-x;
-	border: 1px solid #E5E5E5;
 }
 .add-to-links { margin: 5px 0 0 0;}
 .old-price { text-decoration: line-through;}
@@ -74,12 +65,50 @@ body{
     body {
         padding-top: 0;
     }
+    .label{
+        font-size: 9px;
+    }
+    .nav-tabs > li > a, .nav-pills > li > a {
+        padding-left: 11px;
+        padding-right: 11px;
+    }
+    .modal{
+        width:60%;
+        left:20%;
+        margin: -350px 0  -350px 0;
+        max-height: 100%;
+        text-align: center;
+    }
+    .modal-body{
+        padding: 0;
+        max-height: 100%;
+    }
 }
 @media (max-width: 768px) {
     /* Remove any padding from the body */
     body {
         padding-top: 0;
     }
+    .label{
+        font-size: 9px;
+    }
+    .nav-tabs > li > a, .nav-pills > li > a {
+        padding-left: 11px;
+        padding-right: 11px;
+    }
+    .modal{
+        width:60%;
+        left:20%;
+        margin: -350px 0  -350px 0;
+        max-height: 100%;
+    }
+    .modal-body{
+        padding: 0;
+        max-height: 100%;
+    }
+}
+.modal{
+    text-align: center;
 }
 header {
     padding-bottom: 5px;
@@ -98,7 +127,36 @@ header {
 .input-append .add-on {
     float: left;
     display: block;
+    color: #999;
 }
 .help-inline{
     margin-bottom: 9px;
+}
+.label{
+    line-height: 12px;
+    padding: 2px 4px 3px;
+    vertical-align: inherit;
+}
+li .active > a{
+    color: white;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+    background-color: #08C;
+}
+a.product-image img{
+    margin-top: 2px;
+}
+
+.products-grid .item{
+    margin-top: 2px;
+}
+.product-image .modal{
+    width:60%;
+    left:20%;
+    margin: -350px 0  -350px 0;
+    max-height: 100%;
+    text-align: center;
+}
+.product-image .modal-body{
+    padding: 0;
+    max-height: 100%;
 }
